Fixed HTML placements; fixed sidebar on mobile view; added hover and changed colour for text

--- a/css/main.css
+++ b/css/main.css
@@ -17,28 +17,62 @@ header {
     text-align: center;
 }
 
+h1 {
+    color: black;
+    font-size: 3em;
+    text-shadow: white 1px 1px 5px;
+}
+main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 article {
-    align-items: center;
     border: solid 0.1em black;
     border-radius: 0.3em;
     box-shadow: 1px 1px 5px;
-    display: flex;
-    flex-direction: column;
     font-size: 1.5em;
     margin: 1em;
-    padding: 1em;
+    padding: 0.7em 10em;
 }
 
-nav > a {
-    border: solid 0.1em var(--accent);
+article img {
+    border: solid 0.1em black;
     border-radius: 0.3em;
-    display: inline-flex;
-    flex-wrap: wrap;
+    box-shadow: 1px 1px 5px;
+    display: block;
+    margin: 0.5em auto;
+    width: 100%;
+}
+
+nav {
+    /* background-color: var(--background);
+    border: solid 0.15em var(--accent);
+    border-radius: 0.3em; */
+    border-top: var(--accent) solid 0.15em;
+    display: block;
+    margin: 1em;
+    padding: 0.5em;
+}
+nav > a {
+    background-color: var(--accent);
+    border: solid 0.12em black;
+    border-radius: 0.3em;
+    box-shadow: black 1px 1px 5px;
+    display: inline-block;
     font-size: 1.5em;
-    color: black;
-    padding: 0.5em 1.35em;
+    font-weight: bold;
+    color: white;
+    padding: 0.5em 4em;
     margin: 1em;
     text-decoration: none;
+    text-shadow: black 1px 1px 5px;
+}
+nav > a:hover {
+    background-color: var(--background);
+    color: var(--accent);
+    text-shadow: white 1px 1px 5px;
 }
 html {
     scroll-behavior: smooth;
@@ -59,15 +93,15 @@ html {
 }
 .gallery-layout {
     display: flex;
+    flex-wrap: wrap;
 }
 .feature {
-    /* display: flex;
     flex-direction: column;
-    align-items: center; */
+    align-items: center; 
     text-align: center;
 }
-.feature  img {
-    display: block;
+.feature img {
+    align-content: stretch;
     margin: 0 auto;
     width: 100%;
     max-width: 300px;
@@ -89,6 +123,26 @@ html {
     border-radius: 0.3em;
     color: black;
     font-size: 1.5em;
+    font-weight: bold;
     padding: 0.5em 1.35em;
     text-decoration: none;
+    text-shadow: white 1px 1px 5px;
+}
+.sidebar > a:hover {
+    background-color: var(--accent);
+    color: white;
+    text-shadow: black 1px 1px 5px;
+}
+
+@media (max-width: 600px) {
+        div {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            
+        }
+        aside.sidebar {
+            position: static;
+            
+        }
 }
